--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,24 @@
+@font-face {
+    font-family: 'BebasNeue-Regular';
+    src: local('BebasNeue-Regular'), url(./fonts/BebasNeue-Regular.ttf) format('truetype');
+}
+
 body {
+    background-color: gray;
+}
+
+#top {
+    width: 360px;
+    height: 50px;
     background-color: black;
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
+}
+
+.topLink {
+    font-family: BebasNeue-Regular;
+    font-size: 36px;
+    color: white;
+    text-decoration: none;
 }
