--- a/src/index.css
+++ b/src/index.css
@@ -3,6 +3,11 @@
     src: local('BebasNeue-Regular'), url(./fonts/BebasNeue-Regular.ttf) format('truetype');
 }
 
+@font-face {
+    font-family: 'Inter-ExtraBold';
+    src: local('Inter-ExtraBold'), url(./fonts/Inter-ExtraBold.otf) format('truetype');
+}
+
 body {
     background-color: gray;
 }
@@ -11,9 +16,17 @@ body {
     width: 360px;
     height: 50px;
     background-color: black;
+    font-family: "BebasNeue-Regular";
     display: flex;
     justify-content: space-around;
     align-items: center;
+}
+
+#body {
+    width: 360px;
+    height: 590px;
+    background-color: black;
+    font-family: "Inter-ExtraBold";
 }
 
 .topLink {
