Let while as default text color.

--- a/src/index.css
+++ b/src/index.css
@@ -16,6 +16,7 @@
 body {
     margin: 0%;
     background-color: gray;
+    color: white;
     font-size: 15px;
     font-family: "Inter-ExtraBold";
 }
